[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EasySP"
version = "0.1.0"  # please read feishu doc for version naming rule 
description = "A lightweight library for easy sequence parallelism"
authors = [
    { name = "1B1B team", email = "your@email.com" }
]
requires-python = ">=3.7"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
